--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.20.0
-numpy>=1.22
-pandas>=1.4
-scikit-learn>=1.0
-requests>=2.25
+streamlit==1.32.0
+numpy
+pandas
+matplotlib
+scikit-learn
